<resources>
    <string name="app_name">SampleRestApp</string>
    <string name="action_settings">Settings</string>
    <string name="no_songs">No songs found</string>
    <string name="error_fetch">Failed to fetch searchResult list</string>

    <!-- Search Dialog -->
    <string name="search_remote">Search remote</string>
    <string name="search_hint">Search query</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="search_no_char">Search query cannot be empty!</string>

    <string name="card_pic_description">Miniature image</string>

</resources>
